--- a/package.json
+++ b/package.json
@@ -1,95 +1,38 @@
 {
-  
-"name": "ecommerceapi",
-  
-"version": "1.0.0",
-  
-"description": "Ecommerce Api",
-  
-"main": "app.js",
-  
-"scripts": {
-  
-  
-"start": "node app.js",
-  
-  
-"dev": "nodemon app.js",
-  
-  
-"test": "jest"
-  
-},
-  
-"author": "Akintade",
-  
-"license": "ISC",
-  
-"devDependencies": {
-  
-  
-"@types/cookie": "^0.5.1",
-  
-  
-"chai": "^4.3.7",
-  
-  
-"jest": "^28.1.3",
-  
-  
-"mochai": "^0.2.5",
-  
-  
-"nodemon": "^2.0.19"
-  
-},
-  
-"dependencies": {
-  
-  
-"axios": "^1.5.0",
-  
-  
-"bcrypt": "^5.0.1",
-  
-  
-"body-parser": "^1.20.0",
-  
-  
-"chai-http": "^4.4.0",
-  
-  
-"cookie": "^0.5.0",
-  
-  
-"cookie-parser": "^1.4.6",
-  
-  
-"cors": "^2.8.5",
-  
-  
-"dotenv": "^16.0.1",
-  
-  
-"express": "^4.18.1",
-  
-  
-"joi": "^17.6.0",
-  
-  
-"jsonwebtoken": "^8.5.1",
-  
-  
-"mongodb": "^4.8.1",
-  
-  
-"mongoose": "^6.5.2",
-  
-  
-"multer": "^1.4.5-lts.1",
-  
-  
-"node-cron": "^3.0.2"
-  
-}
+  "name": "ecommerceapi",
+  "version": "1.0.0",
+  "description": "Ecommerce Api",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "jest"
+  },
+  "author": "Akintade",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "chai": "^4.3.7",
+    "jest": "^28.1.3",
+    "mochai": "^0.2.5",
+    "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "axios": "^1.5.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "chai-http": "^4.4.0",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.2.0",
+    "mongodb": "^4.8.1",
+    "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2"
+  }
 }
