--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.7",
+    "nodemailer-express-handlebars": "^6.1.0"
   }
 }
